clusters/dqs.dd.soeren.cloud/istio/gateway.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - "*"
      tls:
        httpsRedirect: true
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: ingress-cert
      hosts:
        - "*"
    - port:
        number: 5671
        name: "amqp-tls"
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 8883
        name: "mqtt-tls"
        protocol: TCP
      hosts:
        - "*"
    - port:
        number: 9094
        name: "am-cluster"
        protocol: TCP
      hosts:
        - "*"
